# src/routes/v1.js
@@ -1,3 +1,5 @@
 const routes = require("express").Router()
-
+const { query } = require("../controllers/query_CTRL")
+routes.get("/query", query)
+routes.post("/query", query)
 module.exports = routes;
